--- a/Home.html
+++ b/Home.html
@@ -3,9 +3,76 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title></title>
+    <meta name="description" content="Landing Page for Rose City 3's">
+    <meta name="author" content="Petar Crljenica">
+    <title>Rose City 3's - Landing Page</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div id="branding">
+          <a href="Home.html">
+            <h1><img src="/img/ROSECITY.THREES-08.jpg" style="width:70px;height:150px;"></h1>
+          </a>
+        </div>
+        <p>Rose City 3's</p>
+        <nav>
+          <ul>
+            <li class="current"><a href="Home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section id="showcase">
+      <div class="container">
+        <p><span>We are providing a new platform for hooping that will make it easier to find places, people, and competition for the best basketball in Portland.</span></p>
+        <aside id="sidebar">
+          <div class="dark">
+            <h3>Contact Us</h3>
+            <form class="contact" action="index.html" method="post">
+              <div>
+                <label>Name</label>
+                <input type="text">
+              </div>
+              <div>
+                <label>Email Address</label>
+                <input type="email">
+              </div>
+              <div>
+                <label>Message</label>
+                <textarea placeholder="Your Message..."></textarea>
+              </div>
+              <button class="button_1" type="submit">Send</button>
+            </form>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <section>
+      <div class="fiba-banner">
+        <p><img src="FIBA-3x3-Banner-PC3.png"></p>
+      </div>
+    </section>
+
+    <section>
+      <div class="fiba-registration-widget">
+        <p>
+          <script data-fiba-embedtype="registration" data-fiba-eventid="0fcb98b8-ef3d-4f78-8210-42808309dfff" src="https://play.fiba3x3.com/embed.js" async></script>
+        </p>
+      </div>
+
+    </section>
+
+    <footer>
+      <p> Copyright &copy; 2018</p>
+        <p><span>Website by: <a href="https://www.linkedin.com/in/petar-crljenica/">Petar Crljenica</a></span></p>
+    </footer>
 
   </body>
 </html>
