--- a/Home.html
+++ b/Home.html
@@ -28,45 +28,17 @@
       </div>
     </header>
 
-    <section id="showcase">
-      <div class="container">
-        <p><span>We are providing a new platform for hooping that will make it easier to find places, people, and competition for the best basketball in Portland.</span></p>
-        <aside id="sidebar">
-          <div class="dark">
-            <h3>Contact Us</h3>
-            <form class="contact" action="index.html" method="post">
-              <div>
-                <label>Name</label>
-                <input type="text">
-              </div>
-              <div>
-                <label>Email Address</label>
-                <input type="email">
-              </div>
-              <div>
-                <label>Message</label>
-                <textarea placeholder="Your Message..."></textarea>
-              </div>
-              <button class="button_1" type="submit">Send</button>
-            </form>
+        <section id="registration">
+          <div class="fiba-registration-widget">
+            <p>
+              <script data-fiba-embedtype="registration" data-fiba-eventid="0fcb98b8-ef3d-4f78-8210-42808309dfff" src="https://play.fiba3x3.com/embed.js" async></script>
+            </p>
           </div>
-        </aside>
-      </div>
-    </section>
-
-    <section>
+        </section>
+    <section id="BANNER">
       <div class="fiba-banner">
-        <p><img src="FIBA-3x3-Banner-PC3.png"></p>
-      </div>
-    </section>
 
-    <section>
-      <div class="fiba-registration-widget">
-        <p>
-          <script data-fiba-embedtype="registration" data-fiba-eventid="0fcb98b8-ef3d-4f78-8210-42808309dfff" src="https://play.fiba3x3.com/embed.js" async></script>
-        </p>
       </div>
-
     </section>
 
     <footer>
