--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Landing Page for Rose City 3's">
     <meta name="author" content="Petar Crljenica">
-    <title>Rose City 3's - Home</title>
+    <title>Rose City 3's - Contact</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
   </head>
@@ -20,9 +20,9 @@
         <p>Rose City 3's</p>
         <nav>
           <ul>
-            <li class="current"><a href="Home.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="Signup.html">Sign Up</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li class="current"><a href="Contact.html">Contact</a></li>
             <p>
               <li><a href="http://Facebook.com/RoseCity3s"><img src="/img/facebookicon.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
               <li><a href="http://gofundme.com/Portland3x3bball"><img src="/img/unnamed.png" alt="gofundme"style="width:30px;height:30px;"></a></li>
@@ -33,43 +33,47 @@
         </nav>
       </div>
     </header>
+  </head>
+  <body>
 
-    <section id="presentation">
+    <section id="showcase1">
       <div class="container">
+        <h1><span>IF you have any more questions or inqueries, please do not hesitate to send us a message and ask.</span> </h1>
+        <form action="/action_page.php" style="border:1px solid #ccc">
+  <div class="container">
+  <div class="container">
+
+    <h1><span>Sign Up</span></h1>
+    <p><span>Please fill in this form to create an account.</span></p>
+    <hr>
+
+    <label for="email"><b><span>Email</span></b></label>
+    <input type="text" placeholder="Enter Email" name="email" required>
+
+    <label for="name"><b><span>Name</span></b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+    <label>
+      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+    </label>
+
+    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+    <div class="clearfix">
+      <button type="button" class="cancelbtn">Cancel</button>
+      <button type="submit" class="signupbtn">Sign Up</button>
+    </div>
+  </div>
+  </div>
+</form>
+
+
       </div>
+
     </section>
-
-    <section id="statement">
-      <div class="container">
-        <h3>Rose City 3’s is Portland’s first 3v3 basketball league. We aim to provide a premium basketball experience that has never been seen in Portland before.</h3>
-      </div>
-    </section>
-
-
-    <section id="boxes">
-      <div class="container">
-          <div class="box1">
-              <p>
-                 We are a Fiba endorsed league.<br>
-                 Stats will be kept up to date weekly along with team standings.<br>
-                 Access to Fiba app where stats and standings can be viewed.<br>
-                 Free jerseys to all participants.<br>
-                 Tournament stile championship.<br>
-                 Champions will be given prize package.<br>
-                 Elite and Rec divisions available.
-              </p>
-          </div>
-          <div class="box2">
-            <h3>We will be hosting a kick off event in mid May prior to the beginning of the league. Everyone is welcome to come join us celebrate our love for basketball! A few events that will be taking place at our kickoff</h3>
-            <p>
-                 Dunk contest.<br>
-                 3-point shooting contest.<br>
-                 Multiple 3v3 games played by a select few Elite teams.<br>
-                 Concessions will be available.
-            </p>
-          </div>
-        </div>
-      </section>
 
     <section id="BANNER">
       <div class="fiba-banner">
