--- a/SignUp.html
+++ b/SignUp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Landing Page for Rose City 3's">
     <meta name="author" content="Petar Crljenica">
-    <title>Rose City 3's - Home</title>
+    <title>Rose City 3's - Signup</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
   </head>
@@ -20,8 +20,8 @@
         <p>Rose City 3's</p>
         <nav>
           <ul>
-            <li class="current"><a href="Home.html">Home</a></li>
-            <li><a href="Signup.html">Sign Up</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li class="current"><a href="Signup.html">Sign Up</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <p>
               <li><a href="http://Facebook.com/RoseCity3s"><img src="/img/facebookicon.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
@@ -34,42 +34,20 @@
       </div>
     </header>
 
-    <section id="presentation">
+    <section id="showcase">
       <div class="container">
-      </div>
-    </section>
-
-    <section id="statement">
-      <div class="container">
-        <h3>Rose City 3’s is Portland’s first 3v3 basketball league. We aim to provide a premium basketball experience that has never been seen in Portland before.</h3>
-      </div>
-    </section>
-
-
-    <section id="boxes">
-      <div class="container">
-          <div class="box1">
-              <p>
-                 We are a Fiba endorsed league.<br>
-                 Stats will be kept up to date weekly along with team standings.<br>
-                 Access to Fiba app where stats and standings can be viewed.<br>
-                 Free jerseys to all participants.<br>
-                 Tournament stile championship.<br>
-                 Champions will be given prize package.<br>
-                 Elite and Rec divisions available.
-              </p>
-          </div>
-          <div class="box2">
-            <h3>We will be hosting a kick off event in mid May prior to the beginning of the league. Everyone is welcome to come join us celebrate our love for basketball! A few events that will be taking place at our kickoff</h3>
-            <p>
-                 Dunk contest.<br>
-                 3-point shooting contest.<br>
-                 Multiple 3v3 games played by a select few Elite teams.<br>
-                 Concessions will be available.
-            </p>
-          </div>
+        <h1>Before you can register for this league you must create an account with us through Fiba. You can simply click this link <a href="https://play.fiba3x3.com/">here</a> and then follow the instructions to set up an account or set up with our fiba widget here. Once this is complete you are eligible to register for the league!</h1>
+      <section id="registration">
+        <div class="fiba-registration-widget">
+          <p>
+            <script data-fiba-embedtype="registration" data-fiba-eventid="0fcb98b8-ef3d-4f78-8210-42808309dfff" src="https://play.fiba3x3.com/embed.js" async></script>
+          </p>
         </div>
+
       </section>
+    </div>
+    </section>
+
 
     <section id="BANNER">
       <div class="fiba-banner">
