--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/font-awesome.min.css">
   </head>
   <body>
+    <!-- The pages header. Displays the rose city logo and has tabs that take you to the home, sign up, and contact us pages. Also has widgets that link to rose citys facebook, instagram, and gofundme pages. -->
+
     <header>
       <div class="container">
         <div id="branding">
@@ -33,18 +35,20 @@
         </nav>
       </div>
     </header>
+    <!-- This section features the main 3on3 logo -->
 
     <section id="presentation">
       <div class="container">
       </div>
     </section>
+    <!--This section features rose city 3's mission statement-->
 
     <section id="statement">
       <div class="container">
         <h3>Rose City 3’s is Portland’s first 3v3 basketball league. We aim to provide a premium basketball experience that has never been seen in Portland before.</h3>
       </div>
     </section>
-
+    <!--This section features out informative boxes. They describe what Rose City 3's will aim to do and detail Rose City 3's next event -->
 
     <section id="boxes">
       <div class="container">
@@ -70,17 +74,19 @@
           </div>
         </div>
       </section>
+      <!-- Fiba banner with advertisement for the official app-->
 
     <section id="BANNER">
       <div class="fiba-banner">
       </div>
     </section>
+    <!-- Footer featuring 3 different widgets with links to rose citys facebook, gofundme, and instagram. Along with a copyright and website authors signature -->
 
     <footer>
       <p>
         <a href="http://Facebook.com/RoseCity3s"><img src="/img/facebookicon.png" alt="Facebook" style="width:70px;height:70px;"></a>
         <a href="http://gofundme.com/Portland3x3bball"><img src="/img/unnamed.png" alt="gofundme"style="width:70px;height:70px;"></a>
-        <a href="http://instagram.com/rosecity3s"><img src="/img/instagram.jpg"
+        <a href="http://instagram.com/rosecity3s"><img src="/img/instagram-blackborder.jpg"
         alt="gofundme"style="width:70px;height:70px;"></a>
       </p>
       <p><span>Copyright &copy; 2018
