--- a/SignUp.html
+++ b/SignUp.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/font-awesome.min.css">
   </head>
   <body>
+    <!-- The pages header. Displays the rose city logo and has tabs that take you to the home, sign up, and contact us pages. Also has widgets that link to rose citys facebook, instagram, and gofundme pages. -->
+
     <header>
       <div class="container">
         <div id="branding">
@@ -33,6 +35,7 @@
         </nav>
       </div>
     </header>
+    <!-- This section describes how the user can sign up with fiba and our company. It also features a fiba widget w/ script directly from the fiba website itself -->
 
     <section id="showcase">
       <div class="container">
@@ -47,23 +50,23 @@
       </section>
     </div>
     </section>
-
+    <!-- Fiba banner with advertisement for the official app-->
 
     <section id="BANNER">
       <div class="fiba-banner">
       </div>
     </section>
+    <!-- Footer featuring 3 different widgets with links to rose citys facebook, gofundme, and instagram. Along with a copyright and website authors signature -->
 
     <footer>
       <p>
         <a href="http://Facebook.com/RoseCity3s"><img src="/img/facebookicon.png" alt="Facebook" style="width:70px;height:70px;"></a>
         <a href="http://gofundme.com/Portland3x3bball"><img src="/img/unnamed.png" alt="gofundme"style="width:70px;height:70px;"></a>
-        <a href="http://instagram.com/rosecity3s"><img src="/img/instagram.jpg"
+        <a href="http://instagram.com/rosecity3s"><img src="/img/instagram-blackborder.jpg"
         alt="gofundme"style="width:70px;height:70px;"></a>
       </p>
       <p><span>Copyright &copy; 2018
         Website by: <a href="https://www.linkedin.com/in/petar-crljenica/">Petar Crljenica</a></span></p>
     </footer>
-
   </body>
 </html>
